--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <<!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>tjoooo</title>
 </head>
 <body>
-
+	<h1>lush to the life - lush life</h1>
 </body>
 </html>
