--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <<!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Välkommen!</title>
 </head>
 <body>
-
+	<h1>Que pasa?</h1>
 </body>
 </html>
