--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
 <<!DOCTYPE html>
 <html>
-<head>
-	<title>tjoooo</title>
-</head>
-<body>
-	<h1>lush to the life - lush life</h1>
-</body>
+	<head>
+		<title>Ciceron - din samåkningspartner!</title>
+		<meta charset="utf-8"/>
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+	</head>
+	<body>
+		<h1>Ciceron</h1>
+		<h2>Din samåkningspartner</h2>
+		<form id="search" method="POST" action="#">
+			<label for="resmal">Resmål<br></label>
+			<input type="text" id="resmal" placeholder="Var vill du åka?">
+			
+			<label for="avresa">Avresa<br></label>
+			<input type="text" id="avresa" placeholder="Var vill du åka ifrån?">
+			
+			<label type="datum">Datum<br></label>
+			<input type="date" id="datum">
+			
+			<button id="sok" type="submit">Sök</button>
+		</form>
+	</body>
 </html>
